# catch-management

./: .gitignore  README.md
.github/workflows/: ci.yml
backend/: .env.example  .env.test.example  CLAUDE.md  api_helpers.py  auth.py  database.py  jst.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  stats.py  supabase_client.py
backend/routers/: catches.py  lures.py  sessions.py  spots.py
backend/scripts/: benchmark_supabase_client.py
backend/tests/: conftest.py  test_auth.py  test_catches.py  test_jst.py  test_logging_config.py  test_lures.py  test_sessions.py  test_spots.py  test_stats.py  test_supabase_client.py
backend/tests/integration/: conftest.py  test_catches_integration.py  test_lures_integration.py  test_rls.py  test_sessions_integration.py  test_spots_integration.py
docs/: architecture-overview.md  architecture.md  code-review.md  database-setup.md  known-issues.md  mobile-ui-spec.md  testing.md
docs/prototypes/: settings-stats-prototype.html
frontend/: package-lock.json  package.json  vitest.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/components/: BottomNav.tsx  CatchForm.tsx  Form.tsx  SessionForm.tsx
frontend/lib/: Loading.tsx  api.ts  catchFormConfig.ts  date.ts  formPayload.ts  pagination.ts  profile.ts  sessionFormConfig.ts  supabase-env.ts  supabase.ts  types.ts  useFetchAllPages.ts  useResourceList.ts
frontend/scripts/: add-label-ids.mjs
frontend/tests/: Loading.test.tsx  api.test.ts  bottom-nav.test.tsx  catches-edit.test.tsx  catches-new.test.tsx  charts.test.tsx  date.test.ts  home.test.tsx  (+13 more)
(+23 files in other folders)
