[project]
name = "catch-management-backend"
version = "0.1.0"
description = "釣果管理アプリ FastAPI バックエンド"
requires-python = ">=3.10"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# pycodestyle / pyflakes / isort / bugbear / pyupgrade
select = ["E", "F", "W", "I", "B", "UP"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
