[project]
name = "catch-management-backend"
version = "0.1.0"
description = "釣果管理アプリ FastAPI バックエンド"
requires-python = ">=3.10"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# pycodestyle / pyflakes / isort / bugbear / pyupgrade
select = ["E", "F", "W", "I", "B", "UP"]
# B008: FastAPI の Depends/Security はデフォルト引数で関数呼び出しするのが正規パターン
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"
markers = [
    "integration: 実 Supabase に接続する結合テスト。TEST_SUPABASE_* 環境変数が無いと自動 skip。",
]
